tests/datatype-copy-02/out.txt
error: right-hand side of datatype copy is not a datatype
  ┌─ inp.sml:1:25
  │
1 │ datatype bad = datatype exn
  │                         ^^^

typechecking failed
